.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Payroll_RTI_envelope_url__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is used for config RTI envelope url on the basis of tax year.</description>
    <fields>
        <fullName>xcdhcm__EPS_url__c</fullName>
        <description>Used for storing EPS envelope url.</description>
        <label>EPS url</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__EYU_url__c</fullName>
        <description>Used for storing EYU envelope url.</description>
        <label>EYU url</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__FPS_url__c</fullName>
        <description>Used for storing FPS envelope url.</description>
        <label>FPS url</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__NINO_url__c</fullName>
        <description>Used for store NINO envelope url.</description>
        <label>NINO url</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Payroll RTI envelope url</label>
</CustomObject>